<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_heightPercent="100%"
        app:layout_widthPercent="100%">


        <EditText
            android:id="@+id/phoneET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/phone_number_hint"
            android:inputType="phone" />


        <EditText
            android:id="@+id/CodeET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneET"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/pin_code_hint"
            android:inputType="numberPassword" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="220dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:src="@drawable/jomopay" />

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="84dp"
            android:text="@string/login_to_your_wallet"
            android:textSize="16dp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="140dp"
            android:layout_height="55dp"
            android:layout_below="@+id/CodeET"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:text="@string/login_btn" />

            <com.projectx.jomopay.components.CircularProgress
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:layout_below="@+id/CodeET"
                android:layout_marginTop="37dp"
                app:circular_progress_color="@color/app_theme_color"
                app:circular_progress_size="Normal" />

    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>